[package]
name = "ironcast"
version = "0.1.0"
authors = ["Jeffrey Bolle <jeffreybolle@gmail.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1", features = ["full"] }
rand = "0.7.3"
thiserror = "1.0.22"
log = "0.4.13"
simple_logger = "1.11.0"
sha3 = "0.9.1"
warp = "0.3"
serde = { version = "1", features = ["derive"] }
maplit = "1.0.2"
